clusters/home/apps/defectdojo/defectdojo/configs/defectdojo-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: defectdojo-ingressroute
  namespace: defectdojo
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://defectdojo.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Defectdojo
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: defectdojo.png
    gethomepage.dev/app: defectdojo # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Defectdojo
    gethomepage.dev/widget.type: "defectdojo"
    gethomepage.dev/widget.url: "https://defectdojo.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`defectdojo.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: defectdojo-server
      port: 80
  tls:
    secretName: defectdojo-certificate-secret
